[package]
name = "presto-cli"
version = "0.1.0"
edition = "2024"
description = "Presto accelerates preprocessing with precision."
authors = ["Amirhossein Ghanipour d3v1ll3n@gmail.com"]
license = "MIT"
repository = "https://github.com/amirhosseinghanipour/presto"
keywords = ["cli", "tui", "data-analysis", "preprocessing", "data-science"]
categories = [
  "command-line-utilities",
  "rendering",
  "parsing",
  "command-line-interface",
]

[dependencies]
rayon = "1.10"
thiserror = "1.0"
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
statrs = "0.17"
chrono = "0.4"
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
